# scarab_gazebo

./: CMakeLists.txt  README.md  package.xml
Media/models/: victoria_crater.mlp  victoria_crater_texture.dae
Media/models/rocky/: model.config  model.sdf
Media/models/rocky_mtn/: model.config  model.sdf
config/: astrobee_ns_honey.rviz
launch/: rocky_world.launch  scarab.launch  scarab_world.launch  scarab_world_victoria.launch  victoria_world.launch
msgs/: PointArr.msg  control.msg
src/: cost_plugin.cc  cost_plugin.cpp
src/old/: cost.cpp  cost_plugin.cc
srv/: getZ.srv
worlds/: .~lock.victoria.world#  granite.world  iss.world  rocky.world  scarab.world  scarab_victoria.world
